[WPE] Pack inspector resources in a .gresource file instead of a shared library https://bugs.webkit.org/show_bug.cgi?id=186594

Reviewed by Adrian Perez de Castro.

Generating .gresource file for WebInspector resources instead of a shared library
for WPE platform; the file is installed to the data directory instead of LIBDIR.

* Source/JavaScriptCore/PlatformWPE.cmake:
* Source/JavaScriptCore/inspector/remote/glib/RemoteInspectorUtils.cpp:
(Inspector::backendCommands):
* Source/WebKit/InspectorGResources.cmake:
* Source/WebKit/PlatformGTK.cmake:
* Source/WebKit/PlatformWPE.cmake:
* Source/WebKit/WebProcess/Inspector/wpe/WebInspectorUIWPE.cpp:
(WebKit::WebInspectorUI::didEstablishConnection):

Canonical link: https://commits.webkit.org/284269@main